Fix year selector problem on mobiles for civio/civio-presupuesto-management#1303

--- a/budget_app/static/stylesheets/modules/data-controllers.scss
+++ b/budget_app/static/stylesheets/modules/data-controllers.scss
@@ -13,7 +13,10 @@
   }
 
   .layout-slider{
-    margin-left: $grid-gutter-width/3;
+    // Fix year slider overlay with share button on mobiles
+    // https://github.com/civio/presupuesto-management/issues/1303
+    // margin-left: $grid-gutter-width/3;
+    margin-left: $grid-gutter-width * 2;
     margin-right: $grid-gutter-width/3;
 
     label{
@@ -136,8 +139,6 @@
     box-shadow: 0px 0px 6px 2px rgba(0,61,246,0.27);
   }
 }
-
-
 
 @media (min-width: $screen-sm-min) {
 
